--- a/public_html/main.css
+++ b/public_html/main.css
@@ -1,7 +1,51 @@
+/* type selector */
 body, html {
+    /* rule set for declaration: property: value; */
     height:100%
 }
 
+/* class selector */
 .bgimg {
+    /* Background immage Photo by Lukas from Pexels*/ 
+    background-image: url('images/pexels-lukas-574071.jpg');
+    /* Full-screen */
     height:100%;
+    /* Center the background image */
+    background-position: center;
+    /* Scale and zoom in the image */
+    background-size: cover;
+    /* Add position: relative to enable absolutely positioned elements inside the image (place text) */
+    position: relative;
+    /* Add a white text color to all elements inside the.bgim container */
+    color: white;
+    /* Add a font */
+    font-family: 'Courier New', Courier, monospace;
+    /* Set the font-ize to 25 pixels */
+    font-size: 25px;
+}
+
+/* Position text in the top-left corner */
+.topleft {
+    position: absolute;
+    top: 0;
+    left: 16px;
+}
+
+.bottomleft {
+    position: absolute;
+    bottom: 0;
+    left: 16px;
+}
+
+.middle {
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    transform: translate (-50%, -50%);
+    text-align: center;
+}
+
+hr {
+    margin: auto;
+    width: 40%;
 }
